[package]
name = "ndarray-glm"
version = "0.0.9"
authors = ["Felix Clark <mfclark3690@gmail.com>"]
description = "Performs regression for generalized linear models using IRLS on data stored in arrays."
edition = "2018"
repository = "https://github.com/felix-clark/ndarray-glm"
readme = "README.md"
license = "MIT"
keywords = ["ndarray", "statistics", "regression", "glm", "irls"]
categories = ["mathematics", "science"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "felix-clark/ndarray-glm" }

[features]
# Feature flags to forward to ndarray-linalg
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
netlib-static = ["ndarray-linalg/netlib-static"]
netlib-system = ["ndarray-linalg/netlib-system"]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]

[dependencies]
itertools = "0.9"
ndarray = { version = "0.14", features = ["blas"] }
ndarray-linalg = { version = "0.13" }
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
approx = "0.4"
ndarray = { version = "0.14", features = ["blas", "approx"] }
ndarray-linalg = { version = "0.13", default-features = false, features = ["openblas-system"]}

# [package.metadata.docs.rs]
# TODO: use ndarray-linalg example for katex in docs
# rustdoc-args = ["--no-deps"]
