[package]
name = "ndarray-glm"
version = "0.0.14"
authors = ["Felix Clark <mfclark3690@gmail.com>"]
description = "Performs regression for generalized linear models using IRLS on data stored in arrays."
edition = "2024"
repository = "https://github.com/felix-clark/ndarray-glm"
readme = "README.md"
license = "MIT"
keywords = ["ndarray", "statistics", "regression", "glm", "irls"]
categories = ["mathematics", "science"]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "felix-clark/ndarray-glm" }

[features]
# Feature flags to forward to ndarray-linalg
openblas-static = ["ndarray-linalg/openblas-static"]
openblas-system = ["ndarray-linalg/openblas-system"]
netlib-static = ["ndarray-linalg/netlib-static"]
netlib-system = ["ndarray-linalg/netlib-system"]
intel-mkl-static = ["ndarray-linalg/intel-mkl-static"]
intel-mkl-system = ["ndarray-linalg/intel-mkl-system"]
# Enables special statistics computations
stats = ["dep:statrs"]

[dependencies]
itertools = "0.14"
katex-doc = "0.1.0"
ndarray = { version = "0.17", features = ["blas"] }
ndarray-linalg = { version = "0.18" }
num-traits = "0.2"
statrs = { version = "0.18", optional = true }
thiserror = "2.0"

[dev-dependencies]
anyhow = "1.0"
approx = "0.5"
ndarray = { version = "0.17", features = ["blas", "approx"] }
ndarray-linalg = { version = "0.18", default-features = false, features = ["openblas-system"]}

[package.metadata.docs.rs]
features = ["openblas-system", "stats"]
rustdoc-args = ["--html-in-header", "katex-header.html"]
